...
            <Text style={styles.title}>ROVERS</Text>
            <View style={styles.content}>
              {rovers.map((rover, index) => (
                <View
                  key={index}
                  style={[styles.rover, index + 1 < rovers.length && styles.roverBorder]}
                  testID="home-rover-item"
                >
                  <Text>Plateau size: {rover[0]}</Text>
                  <Text>Starting position: {rover[1]}</Text>
                  <Text>Movement: {rover[2]}</Text>
                  <Text>Final position: {rover[3]}</Text>
                </View>
              ))}
            </View>
          </>
        )}
        <Button style={styles.button} label="Add rover" onPress={onAddRoverPress} testID="home-add-rover" />
      </ScrollView>
      <AddRover isVisible={addRoverVisible} onClose={onAddRoverPress} onConfirm={onAddRoverConfirm} />
    </>
  );
};

...
