...
          <View style={[global.container, styles.content]}>
            <TextInput
              style={[global.container]}
              error={movementError}
              onChangeText={onChangeText}
              placeholder="Movement - accepting only LRM characters..."
              testID="add-rover-movement-input"
              value={movement}
            />
          </View>

          <View style={[global.container, global.row]}>
            <Button style={global.container} label="Cancel" onPress={onCancelPress} testID="cancel-rover-button" />
            <Button style={global.container} label="Add rover" onPress={onAddRoverPress} testID="add-rover-button" />
          </View>
        </ScrollView>
      </View>
    </Modal>
  );
};
...
